--- a/Pokemonwebsite/requirements.txt
+++ b/Pokemonwebsite/requirements.txt
@@ -19,6 +19,7 @@ multidict==5.1.0
 psycopg2==2.9.1
 pycodestyle==2.7.0
 pymongo==3.12.0
+python-decouple==3.4
 pytz==2021.1
 requests==2.26.0
 sqlparse==0.4.1
